maybe this will work, hopefully, just need something simple

--- a/site/src/group-settings/group-settings.html
+++ b/site/src/group-settings/group-settings.html
@@ -27,4 +27,17 @@
       <label for="style__dark">Dark</label>
     </div>
   </fieldset>
+
+
+  <h3>Order settings</h3>
+  <div class="group-settings__order">
+  <fieldset class="group-settings__order">
+    <legend>Member order</legend>
+    <p>Override the default player panel order here by providing a comma separated list of player names (case sensitive, no spaces between names). Names listed here will show up first, in order. Names not listed here will be shown after in their default order.</p>
+    <input class="group-settings__member-order" type="text" placeholder="Zezima,31337CowKiller,The Old Nite" />
+    <button class="group-settings__set-order">Set Order</button>
+  </fieldset>
+  </div>
+
 </div>
+
