--- a/site/src/group-settings/group-settings.html
+++ b/site/src/group-settings/group-settings.html
@@ -28,16 +28,14 @@
     </div>
   </fieldset>
 
-
-  <h3>Order settings</h3>
-  <div class="group-settings__order">
+  <h3>Panels Order</h3> 
   <fieldset class="group-settings__order">
-    <legend>Member order</legend>
-    <p>Override the default player panel order here by providing a comma separated list of player names (case sensitive, no spaces between names). Names listed here will show up first, in order. Names not listed here will be shown after in their default order.</p>
-    <input class="group-settings__member-order" type="text" placeholder="Zezima,31337CowKiller,The Old Nite" />
-    <button class="group-settings__set-order">Set Order</button>
+    <legend>Members order</legend>
+    <p>Override the default player panel order here by providing a comma separated list of player names (case sensitive, no spaces between names). Names listed here will show up first, in order.</p>
+    <p>Names not listed here will be shown their default order, after the listed names.</p>
+    <input class="group-settings__member-order" type="text" placeholder="Zezima, The Old Nite, Test123" />
+    <button class="group-settings__set-order men-button" type="button">Set Order</button>
   </fieldset>
-  </div>
 
 </div>
 
