--- a/site/src/group-settings/group-settings.html
+++ b/site/src/group-settings/group-settings.html
@@ -30,12 +30,14 @@
 
   <h3>Panels Order</h3> 
   <fieldset class="group-settings__order">
-    <legend>Members order</legend>
-    <p>Override the default player panel order here by providing a comma separated list of player names (case sensitive, no spaces between names). Names listed here will show up first, in order.</p>
+    <legend>Override Panel Order Locally</legend>
+    <p>Provide a comma separated list of player names. Case sensitive, no spaces between names.</p>
     <p>Names not listed here will be shown their default order, after the listed names.</p>
-    <p><span class="emphasize">You may need to refresh after setting the order...</span></p>
-    <input class="group-settings__member-order" type="text" placeholder="Zezima, The Old Nite, Test123" spellcheck="false" size="55"    />
+    <p>If you enter a name with a minus at the beginning, it will hide the player panel.</p>
+    <input class="group-settings__member-order" type="text" placeholder="Zezima, The Old Nite, -HideMe123" spellcheck="false" size="55"    />
+    <br/>
     <button class="group-settings__set-order men-button" type="button">Set Order</button>
+    <p>The page will refresh after submitting.</p>
   </fieldset>
 
 </div>
