--- a/site/src/group-settings/group-settings.html
+++ b/site/src/group-settings/group-settings.html
@@ -30,14 +30,14 @@
 
   <h3>Panels Order</h3> 
   <fieldset class="group-settings__order">
-    <legend>Override Panel Order Locally</legend>
-    <p>Provide a comma separated list of player names. Names are case sensitive.</p>
+    <legend>Override Player Panel Order</legend>
+    <p>Provide a comma separated list of player names in order. Names are case sensitive!</p>
     <p>Names not explicitly listed here will be shown their default order, after the listed names in order.</p>
-    <p>If you enter a name with a minus at the beginning, it will hide the player panel.</p>
+    <p>If you enter a name with a minus at the beginning, it will hide that players panel.</p>
     <input class="group-settings__member-order" type="text" placeholder="Zezima, The Old Nite, -HideMe123, -HideThisPlayer" spellcheck="false" size="55"    />
     <br/>
     <button class="group-settings__set-order men-button" type="button">Set Order</button>
-    <p>The page will refresh after submitting.</p>
+    <small style="color: whitesmoke;">The page will refresh after submitting.</small>
   </fieldset>
 
 </div>
