--- a/site/src/group-settings/group-settings.html
+++ b/site/src/group-settings/group-settings.html
@@ -37,7 +37,8 @@
     <input class="group-settings__member-order" type="text" placeholder="Zezima, The Old Nite, -HideMe123, -HideThisPlayer" spellcheck="false" size="55" />
     <br/>
     <button class="group-settings__set-order men-button" type="button">Set Order</button>
-    <small style="color: gainsboro; margin-bottom: 10px;">The page will refresh after submitting.</small>
+    <small style="color: gainsboro; margin-top: 5px; margin-bottom: 5px;">The page will refresh after submitting.</small>
+    <small style="color: gainsboro; margin-bottom: 10px;">You may also drag, drop or hide below, and hit "Set Order" to save.</small>
   </fieldset>
 
 </div>
