--- a/site/src/group-settings/group-settings.html
+++ b/site/src/group-settings/group-settings.html
@@ -38,7 +38,7 @@
     <br/>
     <button class="group-settings__set-order men-button" type="button">Set Order</button>
     <small style="color: gainsboro; margin-top: 5px; margin-bottom: 5px;">The page will refresh after submitting.</small>
-    <small style="color: gainsboro; margin-bottom: 10px;">You may also drag, drop or hide below, and hit "Set Order" to save.</small>
+    <small style="color: gainsboro; margin-bottom: 10px;">You may also drag and drop or hide below, and hit "Set Order" to save.</small>
   </fieldset>
 
 </div>
