--- a/site/src/group-settings/group-settings.html
+++ b/site/src/group-settings/group-settings.html
@@ -36,9 +36,9 @@
     <p>If you enter a name with a minus at the beginning, it will hide that players panel.</p>
     <input class="group-settings__member-order" type="text" placeholder="Zezima, The Old Nite, -HideMe123, -HideThisPlayer" spellcheck="false" size="55" />
     <br/>
-    <button class="group-settings__set-order men-button" type="button">Set Order</button>
-    <small style="color: gainsboro; margin-top: 5px; margin-bottom: 5px;">The page will refresh after submitting.</small>
-    <small style="color: gainsboro; margin-bottom: 10px;">You may also drag and drop or hide below, and hit "Set Order" to save.</small>
+    <button class="group-settings__set-order men-button" type="button">&ndash;&nbsp;Confirm Order&nbsp;&ndash;</button>
+    <p style="color: gainsboro;">The page will refresh after submitting.</p>
+    <p style="color: gainsboro;">You may also drag and drop or hide below, and hit "Set Order" to save.</p>
   </fieldset>
 
 </div>
