testing labels toggle and ajust interacting css mparsakia

--- a/site/src/map-page/map-page.html
+++ b/site/src/map-page/map-page.html
@@ -7,5 +7,9 @@
       <option value="3">Plane: 3</option>
       <option value="4">Plane: 4</option>
     </select>
+    <select class="map-page__toggle-labels-icons" value="true">
+      <option value="true" selected>Labels On</option>
+      <option value="false">Labels Off</option>
+    </select>
   </div>
 </div>
